...
                android:layout_height="wrap_content"
                android:inputType="none" />
                
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar producto"
            android:layout_marginTop="32dp"/>

    </LinearLayout>
...
